fisrt iteration in order to search for the cast in one selected film

--- a/static/style.css
+++ b/static/style.css
@@ -29,7 +29,7 @@ body {
 
 table, td, th {
     transform: none;
-    border: 1px solid black;
+    border-top: 1px  black;
     vertical-align: middle;
     text-overflow: ellipsis;
     overflow: auto;
