--- a/mc/src/styles/custom.css
+++ b/mc/src/styles/custom.css
@@ -1,3 +1,11 @@
 .collection .collection-item.avatar:not(.circle-clipper) > .circle, .collection .collection-item.avatar :not(.circle-clipper) > .circle{
     height: auto;
 }
+
+.board {
+    margin: 5px;
+}
+
+.card {
+    margin: 10px;
+}
