Add collapse an improve responsiveness a bit

--- a/mc/src/styles/custom.css
+++ b/mc/src/styles/custom.css
@@ -16,7 +16,7 @@
 }
 
 .card-button {
-    opacity: 0.4;
+    opacity: 0.55;
 }
 .card-button:hover {
     opacity: 1;
@@ -27,9 +27,14 @@
 }
 
 .toastmatch {
-    color: #4db6ac;
+    background: #4db6ac;
 }
 
 .toastnotmatch {
-    color: #e6ee9c;
+    color: black;
+    background: #e6ee9c;
+}
+
+.collapsedboard {
+    display: none;
 }
